# anthropicautodocstrings

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run_tests_and_report.yml  snyk-security.yml  tag_and_release_package.yml
anthropicautodocstrings/: cli.py  main.py
tests/: test_anthropicautodocstrings.py
