[tool.poetry]
name = "anthropicautodocstrings"
version = "0.0.1"
description = "Anthropic Auto Docstrings Generator, using updated asynchronous methods."
authors = ["Jordan McLaughlin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
astor = "^0.8.1"
anthropic = "^0.3.10"
typer = "^0.9.0"
black = "^23.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
aads = 'anthropicautodocstrings.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
