[tool.poetry]
name = "anthropicautodocstrings"
version = "0.0.5"
description = "Anthropic Auto Docstrings Generator, using updated asynchronous methods."
authors = ["Jordan McLaughlin <cantoo@duck.com>"]
maintainers = ["Jordan McLaughlin <cantoo@duck.com>"]
readme = "README.md"
repository = "https://github.com/JordanM575/anthropicautodocstrings"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
astor = "^0.8.1"
anthropic = "^0.3.10"
typer = "^0.9.0"
black = "^23.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"

[tool.poetry.scripts]
aads = 'anthropicautodocstrings.main:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
