[tool.poetry]
name = "anthropicautodocstrings"
version = "0.0.7"
description = "Anthropic Auto Docstrings Generator"
authors = ["Jordan McLaughlin <cantoo@duck.com>"]
maintainers = ["Jordan McLaughlin <cantoo@duck.com>"]
readme = "README.md"
repository = "https://github.com/JordanM575/anthropicautodocstrings"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
astor = "^0.8.1"
anthropic = "^0.28.0"
typer = "^0.12.3"
black = "^24.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"

[tool.poetry.scripts]
aads = 'anthropicautodocstrings.main:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
